<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/upload_dialog_bg"
        android:orientation="vertical">
        <Button
            android:id="@+id/tv_take_photo"
            android:text="@string/take_photo"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="16sp"
            android:background="@drawable/upload_dialog_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#cfcfcf"/>
        <Button
            android:id="@+id/tv_choose_photo"
            android:text="@string/choose_photo"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="16sp"
            android:background="@drawable/upload_dialog_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <Button
        android:id="@+id/tv_cancel"
        android:text="@string/cancel"
        android:gravity="center"
        android:layout_marginTop="18dp"
        android:textSize="16sp"
        android:padding="8dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/upload_dialog_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>