<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@color/white"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/ques"
        />

    <TextView
        android:id="@+id/item_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/mine_duty"
        android:textSize="16sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/item_text"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/item_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/gray_line"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/mine_no"/>

        <Button
            android:id="@+id/item_yes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/btn_red"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/mine_yes"/>
    </LinearLayout>

</RelativeLayout>