<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/img_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/card"
        />

    <TextView
        android:id="@+id/pay_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_pay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="现金支付确认"
        android:textSize="16sp"/>


    <TextView
        android:id="@+id/card_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pay_type"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="支付方式"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/pay_type"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="现金"
        android:textSize="16sp"

        />


    <TextView
        android:id="@+id/recharge_recharge_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_type"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/recharge_recharge_money"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/tv_recharge_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/card_type"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="--元"
        android:textSize="16sp"

        />

    <TextView
        android:id="@+id/recharge_recharge_after"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recharge_recharge_money"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/recharge_recharge_after"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/tv_recharge_after"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/recharge_recharge_money"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="--元"
        android:textSize="16sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/recharge_recharge_after"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pay_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/gray_line"
            android:gravity="center"
            android:text="@string/back"/>

        <Button
            android:id="@+id/pay_sure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/btn_red"
            android:gravity="center"
            android:text="@string/sure"/>
    </LinearLayout>

</RelativeLayout>